# bcos-tars-protocol

./: CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage.yml  workflow.yml
bcos-tars-protocol/: BlockFactoryImpl.h  BlockHeaderImpl.cpp  BlockHeaderImpl.h  BlockImpl.cpp  BlockImpl.h  CMakeLists.txt  Common.h  ErrorConverter.h  ExecutionResultImpl.h  ExecutorServiceClient.h  GatewayServiceClient.h  PBFTServiceClient.h  RpcServiceClient.h  TransactionFactoryImpl.h  TransactionImpl.h  TransactionMetaDataImpl.h  TransactionReceiptFactoryImpl.h  TransactionReceiptImpl.h  TransactionSubmitResultFactoryImpl.h  TransactionSubmitResultImpl.h  TxPoolServiceClient.h
bcos-tars-protocol/client/: ExecutorServiceClient.h  FrontServiceClient.h  GatewayServiceClient.h  GroupManagerServiceClient.cpp  GroupManagerServiceClient.h  LedgerServiceClient.cpp  LedgerServiceClient.h  PBFTServiceClient.cpp  PBFTServiceClient.h  RpcServiceClient.h  SchedulerServiceClient.cpp  SchedulerServiceClient.h  TxPoolServiceClient.h
bcos-tars-protocol/protocol/: BlockFactoryImpl.h  BlockHeaderFactoryImpl.h  BlockHeaderImpl.cpp  BlockHeaderImpl.h  BlockImpl.cpp  BlockImpl.h  TransactionImpl.cpp  TransactionImpl.h  TransactionMetaDataImpl.h  TransactionReceiptImpl.cpp  TransactionReceiptImpl.h  TransactionSubmitResultFactoryImpl.h  TransactionSubmitResultImpl.h
bcos-tars-protocol/tars/: Block.tars  DispatcherService.tars  ExecutorService.tars  GatewayService.tars  GroupInfo.tars  GroupManagerService.tars  PBFTService.tars  RpcService.tars  SchedulerService.tars  Transaction.tars  TransactionSubmitResult.tars  TxPoolService.tars
cmake/: InstallInclude.cmake  config.cmake
doc/: README_CN.md
test/: CMakeLists.txt  ProtocolTest.cpp  ServiceClientTest.cpp
